Update Amenitity and RoomTyle and HotelPolicy